@@ -3,6 +3,7 @@ package mdplayer.driver.fmp.nise98;
 import java.util.Stack;
 
 
+// TODO c# int16 is signed
 public class Register286 {
 
     // eRegs     sRegs
@@ -16,9 +17,10 @@ public class Register286 {
     // 7 ... DI
     public short[] eRegs = new short[8];
     public short[] sRegs = new short[4];
-    public short IP = 0;
-    public short FLAG = (short) 0x8000;
+    public short ip = 0;
+    public short flag = (short) 0x8000;
 
+    // es: 0
     public short getES() {
         return sRegs[0];
     }
@@ -27,6 +29,7 @@ public class Register286 {
         sRegs[0] = value;
     }
 
+    // cs: 1
     public short getCS() {
         return sRegs[1];
     }
@@ -35,6 +38,7 @@ public class Register286 {
         sRegs[1] = value;
     }
 
+    // ss: 2
     public short getSS() {
         return sRegs[2];
     }
@@ -43,6 +47,9 @@ public class Register286 {
         sRegs[2] = value;
     }
 
+    // ----
+
+    // ds: 3
     public short getDS() {
         return sRegs[3];
     }
@@ -51,6 +58,7 @@ public class Register286 {
         sRegs[3] = value;
     }
 
+    // ax: 0
     public short getAX() {
         return eRegs[0];
     }
@@ -59,18 +67,20 @@ public class Register286 {
         eRegs[0] = value;
     }
 
+    // cx: 1
     public short getCX() {
         return eRegs[1];
     }
 
     public void decCX() {
-        setCX((short) (getCX() - 1));
+        eRegs[1]--;
     }
 
     public void setCX(short value) {
         eRegs[1] = value;
     }
 
+    // dx: 2
     public short getDX() {
         return eRegs[2];
     }
@@ -79,6 +89,7 @@ public class Register286 {
         eRegs[2] = value;
     }
 
+    // bx: 3
     public short getBX() {
         return eRegs[3];
     }
@@ -87,22 +98,24 @@ public class Register286 {
         eRegs[3] = value;
     }
 
+    // sp: 4
     public short getSP() {
         return eRegs[4];
     }
 
     public void addSP(int value) {
-        setSP((short) (getSP() + value));
+        eRegs[4] = (short) (eRegs[4] + value);
     }
 
     public void subSP(int value) {
-        setSP((short) (getSP() - value));
+        eRegs[4] -= value;
     }
 
     public void setSP(short value) {
         eRegs[4] = value;
     }
 
+    // bp: 5
     public short getBP() {
         return eRegs[5];
     }
@@ -111,324 +124,315 @@ public class Register286 {
         eRegs[5] = value;
     }
 
+    // si: 6
     public short getSI() {
         return eRegs[6];
     }
 
     public void addSI(int value) {
-        setSI((short) (getSI() + value));
+        eRegs[6] += value;
     }
 
     public void setSI(short value) {
         eRegs[6] = value;
     }
 
+    // di: 7
     public short getDI() {
         return eRegs[7];
     }
 
     public void addDI(int value) {
-        setDI((short) (getDI() + value));
+        eRegs[7] = (short) (eRegs[7] + value);
     }
 
     public void setDI(short value) {
         eRegs[7] = value;
     }
 
+    // ----
+
+    //
     public byte getAL() {
         return (byte) eRegs[0];
     }
 
-    public void setAL(short value) {
+    public void setAL(byte value) {
         eRegs[0] &= (short) 0xff00;
-        eRegs[0] |= (short) value;
+        eRegs[0] |= (value & 0xff);
     }
 
-    public short getAH() {
+    public byte getAH() {
         return (byte) (eRegs[0] >> 8);
     }
 
-    public void setAH(short value) {
+    public void setAH(byte value) {
         eRegs[0] &= (short) 0x00ff;
-        eRegs[0] |= (short) (value << 8);
+        eRegs[0] |= (short) ((value & 0x00ff) << 8);
     }
 
-    public short getCL() {
+    //
+    public byte getCL() {
         return (byte) eRegs[1];
     }
 
-    public void setCL(short value) {
+    public void setCL(byte value) {
         eRegs[1] &= (short) 0xff00;
-        eRegs[1] |= (short) value;
+        eRegs[1] |= (value & 0xff);
     }
 
-    public Byte getCH() {
+    public byte getCH() {
         return (byte) (eRegs[1] >> 8);
     }
 
-    public void setCH(Byte value) {
+    public void setCH(byte value) {
         eRegs[1] &= (short) 0x00ff;
-        eRegs[1] |= (short) (value << 8);
+        eRegs[1] |= (short) ((value & 0xff) << 8);
     }
 
-    public Byte getDL() {
+    //
+    public byte getDL() {
         return (byte) eRegs[2];
     }
 
-    public void setDL(Byte value) {
+    public void setDL(byte value) {
         eRegs[2] &= (short) 0xff00;
-        eRegs[2] |= (short) value;
+        eRegs[2] |= (short) (value & 0xff);
     }
 
-    public Byte getDH() {
+    public byte getDH() {
         return (byte) (eRegs[2] >> 8);
     }
 
-    public void setDH(Byte value) {
+    public void setDH(byte value) {
         eRegs[2] &= (short) 0x00ff;
-        eRegs[2] |= (short) (value << 8);
+        eRegs[2] |= (short) ((value & 0xff) << 8);
     }
 
-    public Byte getBL() {
+    //
+    public byte getBL() {
         return (byte) eRegs[3];
     }
 
-    public void setBL(Byte value) {
+    public void setBL(byte value) {
         eRegs[3] &= (short) 0xff00;
-        eRegs[3] |= (short) value;
+        eRegs[3] |= (short) (value & 0xff);
     }
 
-    public Byte getBH() {
+    public byte getBH() {
         return (byte) (eRegs[3] >> 8);
     }
 
-    public void setBH(Byte value) {
+    public void setBH(byte value) {
         eRegs[3] &= (short) 0x00ff;
-        eRegs[3] |= (short) (value << 8);
+        eRegs[3] |= (short) ((value & 0xff) << 8);
     }
 
+    // ----
+
     public int getCS_IP() {
-        {
-            return ((short) getCS() << 4) + (short) IP;
-        }
+        return ((getCS() & 0xffff) << 4) + (ip & 0xffff);
     }
 
     public int getDS_DX() {
-        {
-            return ((short) getDS() << 4) + (short) getDX();
-        }
+        return ((getDS() & 0xffff) << 4) + (getDX() & 0xffff);
     }
 
     public int getDS_SI() {
-        {
-            return ((short) getDS() << 4) + (short) getSI();
-        }
+        return ((getDS() & 0xffff) << 4) + (getSI() & 0xffff);
     }
 
     public int getDS_DI() {
-        {
-            return ((short) getDS() << 4) + (short) getDI();
-        }
+        return ((getDS() & 0xffff) << 4) + (getDI() & 0xffff);
     }
 
     public int getES_DI() {
-        {
-            return ((short) getES() << 4) + (short) getDI();
-        }
+        return ((getES() & 0xffff) << 4) + (getDI() & 0xffff);
     }
 
     public int getSS_SP() {
-        {
-            return ((short) getSS() << 4) + (short) getSP();
-        }
+        return ((getSS() & 0xffff) << 4) + (getSP() & 0xffff);
     }
 
+    // ----
+
     // CF bit0
-    public boolean getCF() {
-        return ((FLAG & (1 << 0)) != 0);
+    public boolean isCF() {
+        return (flag & (1 << 0)) != 0;
     }
 
     public void setCF(boolean value) {
-        FLAG &= ~(1 << 0);
-        FLAG |= (short) (value ? (1 << 0) : 0);
+        flag &= ~(1 << 0);
+        flag |= (short) (value ? (1 << 0) : 0);
     }
 
     // PF bit2
-    public boolean getPF() {
-        return ((FLAG & (1 << 2)) != 0);
+    public boolean isPF() {
+        return (flag & (1 << 2)) != 0;
     }
 
     public void setPF(boolean value) {
-        FLAG &= ~(1 << 2);
-        FLAG |= (short) (value ? (1 << 2) : 0);
+        flag &= ~(1 << 2);
+        flag |= (short) (value ? (1 << 2) : 0);
     }
 
     // AF bit4
-    public boolean getAF() {
-        return ((FLAG & (1 << 4)) != 0);
+    public boolean isAF() {
+        return (flag & (1 << 4)) != 0;
     }
 
     public void setAF(boolean value) {
-        FLAG &= ~(1 << 4);
-        FLAG |= (short) (value ? (1 << 4) : 0);
+        flag &= ~(1 << 4);
+        flag |= (short) (value ? (1 << 4) : 0);
     }
 
     // ZF bit6
-    public boolean getZF() {
-        return ((FLAG & (1 << 6)) != 0);
+    public boolean isZF() {
+        return (flag & (1 << 6)) != 0;
     }
 
     public void setZF(boolean value) {
-        FLAG &= ~(1 << 6);
-        FLAG |= (short) (value ? (1 << 6) : 0);
+        flag &= ~(1 << 6);
+        flag |= (short) (value ? (1 << 6) : 0);
     }
 
     // SF bit7
-    public boolean getSF() {
-        return ((FLAG & (1 << 7)) != 0);
+    public boolean isSF() {
+        return (flag & (1 << 7)) != 0;
     }
 
     public void setSF(boolean value) {
-        FLAG &= ~(1 << 7);
-        FLAG |= (short) (value ? (1 << 7) : 0);
+        flag &= ~(1 << 7);
+        flag |= (short) (value ? (1 << 7) : 0);
     }
 
     // TF bit8
-    public boolean getTF() {
-        return ((FLAG & (1 << 8)) != 0);
+    public boolean isTF() {
+        return (flag & (1 << 8)) != 0;
     }
 
     public void setTF(boolean value) {
-        FLAG &= ~(1 << 8);
-        FLAG |= (short) (value ? (1 << 8) : 0);
+        flag &= ~(1 << 8);
+        flag |= (short) (value ? (1 << 8) : 0);
     }
 
     // IF bit9
-    public boolean getIF() {
-        return ((FLAG & (1 << 9)) != 0);
+    public boolean isIF() {
+        return (flag & (1 << 9)) != 0;
     }
 
     public void setIF(boolean value) {
-        FLAG &= ~(1 << 9);
-        FLAG |= (short) (value ? (1 << 9) : 0);
+        flag &= ~(1 << 9);
+        flag |= (short) (value ? (1 << 9) : 0);
     }
 
     // DF bit10
-    public boolean getDF() {
-        return ((FLAG & (1 << 10)) != 0);
+    public boolean isDF() {
+        return (flag & (1 << 10)) != 0;
     }
 
     public void setDF(boolean value) {
-        FLAG &= ~(1 << 10);
-        FLAG |= (short) (value ? (1 << 10) : 0);
+        flag &= ~(1 << 10);
+        flag |= (short) (value ? (1 << 10) : 0);
     }
 
     // OF bit11
-    public boolean getOF() {
-        return ((FLAG & (1 << 11)) != 0);
+    public boolean isOF() {
+        return (flag & (1 << 11)) != 0;
     }
 
     public void setOF(boolean value) {
-        FLAG &= ~(1 << 11);
-        FLAG |= (short) (value ? (1 << 11) : 0);
+        flag &= ~(1 << 11);
+        flag |= (short) (value ? (1 << 11) : 0);
     }
 
-    public int AuxVal, OverVal, SignVal, ZeroVal, CarryVal, DirVal;      /* 0 or non-0 valued flags */
-    public byte ParityVal;
+    public int auxVal, overVal, signVal, zeroVal, carryVal, dirVal; // 0 or non-0 valued flags
+    public byte parityVal;
 
     public void setSZPFb(byte ans) {
-        SignVal = (byte) ans;
-        setSF(SignVal < 0);
-        ZeroVal = ans;
-        setZF(ZeroVal == 0);
-        ParityVal = ans;
-        setPF(parity_table[ParityVal & 0xff]);
+        signVal = ans;
+        setSF(signVal < 0);
+        zeroVal = ans & 0xff;
+        setZF(zeroVal == 0);
+        parityVal = ans;
+        setPF(parity_table[parityVal & 0xff]);
     }
 
     public void setSZPFw(short ans) {
-        SignVal = (short) ans;
-        setSF(SignVal < 0);
-        ZeroVal = ans;
-        setZF(ZeroVal == 0);
-        ParityVal = (byte) ans;
-        setPF(parity_table[ParityVal & 0xff]);
+        signVal = ans;
+        setSF(signVal < 0);
+        zeroVal = ans & 0xffff;
+        setZF(zeroVal == 0);
+        parityVal = (byte) ans;
+        setPF(parity_table[parityVal & 0xff]);
     }
 
     public void setCFb(short a) {
-        CarryVal = (a) & 0x100;
-        setCF(CarryVal != 0);
+        carryVal = a & 0x100;
+        setCF(carryVal != 0);
     }
 
     public void setCFw(int a) {
-        CarryVal = (int) ((a) & 0x10000);
-        setCF(CarryVal != 0);
+        carryVal = a & 0x1_0000;
+        setCF(carryVal != 0);
     }
 
     public void setAF(byte a, byte b, byte ans) {
-        AuxVal = ((ans) ^ ((a) ^ (b))) & 0x10;
-        setAF(AuxVal != 0);
+        auxVal = ((ans & 0xff) ^ ((a & 0xff) ^ (b & 0xff))) & 0x10;
+        setAF(auxVal != 0);
     }
 
-    // ans = a - b
-    // の時のOF判定
-    // 事前にSFの判定を行っておくこと
+    // OF determination when ans = a - b
+    // SF determination must be performed in advanceans = a - b
     public void setOFwSub(short a, short b, short ans) {
         // OF = SF
         //    ? ((b > 0 && ans > a) || (b < 0 && ans < a))
         //    : ans > a;
 
-        OverVal = ((b ^ a) & (b ^ ans) & 0x8000);
-        setOF(OverVal != 0);
+        overVal = ((b & 0xffff) ^ (a & 0xffff)) & ((b & 0xffff) ^ (ans & 0xffff)) & 0x8000;
+        setOF(overVal != 0);
     }
 
     public void setOFbSub(byte a, byte b, byte ans) {
         // OF = SF
         //    ? ((b > 0 && ans > a) || (b < 0 && ans < a))
         //    : ans > a;
-        OverVal = ((b ^ a) & (b ^ ans) & 0x80);
-        setOF(OverVal != 0);
+        overVal = ((b & 0xff) ^ (a & 0xff)) & ((b & 0xff) ^ (ans & 0xff)) & 0x80;
+        setOF(overVal != 0);
     }
 
     public void setOFwAdd(short a, short b, short ans) {
         // OF = SF
         //    ? ((a >= 0 && ans < b) || (a < 0 && ans > b))
         //    : (ans < a || ans < b);
-        OverVal = (((ans) ^ (a)) & ((ans) ^ (b)) & 0x8000);
+        overVal = ((ans & 0xffff) ^ (a & 0xffff)) & ((ans & 0xffff) ^ (b & 0xffff)) & 0x8000;
     }
 
-    public void SetOFbAdd(byte a, byte b, byte ans) {
+    public void setOFbAdd(byte a, byte b, byte ans) {
         // OF = SF
         //    ? ((a >= 0 && ans < b) || (a < 0 && ans > b))
         //    : (ans < a || ans < b);
-        OverVal = (((ans) ^ (a)) & ((ans) ^ (b)) & 0x80);
+        overVal = ((ans & 0xff) ^ (a & 0xff)) & ((ans & 0xff) ^ (b & 0xff)) & 0x80;
     }
 
     @Override
     public String toString() {
-        return String.format(
-                "AX:{0:X04} CX:{1:X04} DX:{2:X04} BX:{3:X04} SP:{4:X04} BP:{5:X04} SI:{6:X04} DI:{7:X04} \r\n"
-                        + "ES:{8:X04} CS:{9:X04} SS:{10:X04} DS:{11:X04} IP:{12:X04} FLAG:{13}",
+        return """
+                %nAX:%04x CX:%04x DX:%04x BX:%04x SP:%04x BP:%04x SI:%04x DI:%04x\s
+                ES:%04x CS:%04x SS:%04x DS:%04x IP:%04x FLAG:[%s.%s.%s.%s%s%s%s%s%s....%04x]
+                """.formatted(
                 getAX(), getCX(), getDX(), getBX(), getSP(), getBP(), getSI(), getDI(),
-                getES(), getCS(), getSS(), getDS(), IP, String.format(
-                        "{16:X04}[{15}{14}{13}{12}{11}{10}{9}{8}{7}{6}{5}{4}{3}{2}{1}{0}]",
-                        getCF() ? "C" : "-",
-                        ".",
-                        getPF() ? "P" : "-",
-                        ".",
-                        getAF() ? "A" : "-",
-                        ".",
-                        getZF() ? "Z" : "-",
-                        getSF() ? "S" : "-",
-                        getTF() ? "T" : "-",
-                        getIF() ? "I" : "-",
-                        getDF() ? "D" : "-",
-                        getOF() ? "O" : "-",
-                        ".",
-                        ".",
-                        ".",
-                        ".",
-                        FLAG
-                )
+                getES(), getCS(), getSS(), getDS(), ip,
+                (isCF() ? "C" : "-"),
+                (isPF() ? "P" : "-"),
+                (isAF() ? "A" : "-"),
+                (isZF() ? "Z" : "-"),
+                (isSF() ? "S" : "-"),
+                (isTF() ? "T" : "-"),
+                (isIF() ? "I" : "-"),
+                (isDF() ? "D" : "-"),
+                (isOF() ? "O" : "-"),
+                flag & 0xffff
         );
     }
 
@@ -441,11 +445,10 @@ public class Register286 {
                     c++;
             }
 
-            parity_table[i] = ((c & 1) == 0);
+            parity_table[i] = (c & 1) == 0;
         }
     }
 
-    private Stack<Short> regStack = new Stack<>();
-    private boolean[] parity_table;
-
+    private final Stack<Short> regStack = new Stack<>();
+    private final boolean[] parity_table;
 }
